[package]
name = "linspm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.20", features = ["full"] }
hyper-tls = "0.5.0"

tokio = { version = "1.20.1", features = ["full"] }

log = "0.4.17"
simple_logger = { version = "2.3.0", features = ["colors", "threads"] }
rayon = "1.5.3"
futures = "0.3.24"
